force-app/main/default/objects/Publication__c/Publication__c.object-meta.xml
<CustomObject>
    <description>Publishing and kiosk catalogue records for magazines, books, and digital editions.</description>
    <label>Publication</label>
    <nameField>
        <displayFormat>PUB-{0000}</displayFormat>
        <label>Publication Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>