force-app/main/default/objects/Publication__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Publications</relationshipLabel>
    <relationshipName>Publications</relationshipName>
    <type>Lookup</type>
</CustomField>