force-app/main/default/objects/Publication__c/fields/Flipbook_URL__c.field-meta.xml
<CustomField>
    <fullName>Flipbook_URL__c</fullName>
    <label>Flipbook URL</label>
    <type>Url</type>
</CustomField>