force-app/main/default/objects/Publication__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Magazine</fullName>
                <default>true</default>
                <label>Magazine</label>
            </value>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>Lookbook</fullName>
            </value>
            <value>
                <fullName>Catalogue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>